tests/fixtures/invalid/int_floordiv_str.py
# Cannot floor divide Int and Str
x: int = 1 // "hello"
